[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/EscMenu.gd" type="Script" id=1]
[ext_resource path="res://Sound/sfx_sounds_pause1_in.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/sfx_sounds_pause1_out.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/MainTheme.tres" type="Theme" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D NOISE_PATTERN;

void fragment(){
    float noiseValue = texture(NOISE_PATTERN, UV + vec2(TIME*0.02, TIME*0.002)).x;
    COLOR = vec4(noiseValue);
	COLOR.a = 1.0;
}
"
custom_defines = ""

[sub_resource type="OpenSimplexNoise" id=2]
period = 27.5

[sub_resource type="NoiseTexture" id=3]
width = 500
height = 500
seamless = true
noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/NOISE_PATTERN = SubResource( 3 )

[node name="EscMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0.392157 )
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 20.0
margin_bottom = 230.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 128.0
margin_top = 30.0
margin_right = 271.0
margin_bottom = 194.0
mouse_filter = 2
custom_constants/separation = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 143.0
margin_bottom = 30.0
rect_min_size = Vector2( 125, 30 )
text = "Continue"

[node name="ToggleFullscreen" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 143.0
margin_bottom = 63.0
rect_min_size = Vector2( 125, 30 )
toggle_mode = true
text = "Fullscreen"

[node name="Quit" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 143.0
margin_bottom = 96.0
rect_min_size = Vector2( 125, 30 )
toggle_mode = true
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 143.0
margin_bottom = 129.0
custom_constants/separation = 0

[node name="HardReset" type="Button" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 30.0
rect_min_size = Vector2( 125, 30 )
text = "Hard Reset"

[node name="CheckBox" type="CheckBox" parent="ColorRect/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 143.0
margin_bottom = 30.0

[node name="MusicLbl" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 143.0
margin_bottom = 145.0
text = "Volume"
align = 1
valign = 2

[node name="MusicSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 143.0
margin_bottom = 164.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5

[node name="Effects" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
visible = false
margin_top = 92.0
margin_right = 125.0
margin_bottom = 106.0
text = "Effects Volume"
align = 1
valign = 2

[node name="EffectsSlider" type="HSlider" parent="ColorRect/CenterContainer/VBoxContainer"]
visible = false
margin_top = 92.0
margin_right = 125.0
margin_bottom = 108.0
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5

[node name="PauseIn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="PauseOut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="toggled" from="ColorRect/CenterContainer/VBoxContainer/ToggleFullscreen" to="." method="_on_ToggleFullscreen_toggled"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/HBoxContainer/HardReset" to="." method="_on_HardReset_pressed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/MusicSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="ColorRect/CenterContainer/VBoxContainer/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
